Update ukranian translation to include config options: Uploaded on behalf of hacker_808_

--- a/src/main/resources/assets/mwc/lang/uk_UA.lang
+++ b/src/main/resources/assets/mwc/lang/uk_UA.lang
@@ -1070,87 +1070,87 @@ gui.grenadeExplodes=Вибух через %s секунд
 gui.coolingDown=Охолодження...
 
 config.category.ores.name=Ores
-config.ores.sulfurSpawnsPerChunk.property.name=Sulfur Ore Per Chunk
-config.ores.sulfurSpawnsPerChunk.property.tooltip=The amount of Sulfur Ore spawned per chunk.
-config.ores.copperSpawnsPerChunk.property.name=Copper Ore Per Chunk
-config.ores.copperSpawnsPerChunk.property.tooltip=The amount of Copper Ore spawned per chunk.
-config.ores.tinSpawnsPerChunk.property.name=Tin Ore Per Chunk
-config.ores.tinSpawnsPerChunk.property.tooltip=The amount of Tin Ore spawned per chunk.
-config.ores.leadSpawnsPerChunk.property.name=Lead Ore Per Chunk
-config.ores.leadSpawnsPerChunk.property.tooltip=The amount of Lead Ore spawned per chunk.
-config.ores.graphiteSpawnsPerChunk.property.name=Graphite Ore Per Chunk
-config.ores.graphiteSpawnsPerChunk.property.tooltip=The amount of Graphite Ore spawned per chunk.
+config.ores.sulfurSpawnsPerChunk.property.name=Сірчана руда в чанку
+config.ores.sulfurSpawnsPerChunk.property.tooltip=Кількість сірчаної руди, з'явленої в чанку.
+config.ores.copperSpawnsPerChunk.property.name=	Мідна руда в чанку
+config.ores.copperSpawnsPerChunk.property.tooltip=Кількусть мідної руди, з'явленої в чанку.
+config.ores.tinSpawnsPerChunk.property.name=Олов'яна руда в чанку
+config.ores.tinSpawnsPerChunk.property.tooltip=Кількість олов'яної руди, з'явленої в чанку.
+config.ores.leadSpawnsPerChunk.property.name=Свинцева руда в чанку
+config.ores.leadSpawnsPerChunk.property.tooltip=Кількість свинцевої руди, з'явленої в чанку.
+config.ores.graphiteSpawnsPerChunk.property.name=Графітова руда в чанку
+config.ores.graphiteSpawnsPerChunk.property.tooltip=Кількість графітової руди, з'явленої в чанку.
 
 config.category.gameplay.name=Gameplay
-config.gameplay.enableAmmoCounter.property.name=Ammo Counter
-config.gameplay.enableAmmoCounter.property.tooltip=Enable/Disable the Ammo Counter
-config.gameplay.ammoCounterX.property.name=Ammo Counter X
-config.gameplay.ammoCounterY.property.name=Ammo Counter Y
-config.gameplay.ammoCounterSize.property.name=Ammo Counter Size
-config.gameplay.enableOpenDoorDisplay.property.name=Open Door Display
-config.gameplay.enableAmmoCounterBackground.property.name=Ammo Counter Background
-config.gameplay.enableAmmoCounterBackgroundReverse.property.name=Ammo Counter Reverse
-config.gameplay.enableOpenDoorDisplay.property.tooltip=Enable/Disable the Open Door Display
-config.gameplay.holdToAim.property.name=Hold To Aim
-config.gameplay.holdToAim.property.tooltip=Enable/Disable hold to aim
-config.gameplay.enableAmmoCounterBackground.property.tooltip=Enable/Disable the background for Ammo Counter
-config.gameplay.enableBleedingOnHit.property.name=Bleeding On Hit
-config.gameplay.enableBleedingOnHit.property.tooltip=Enable/Disable bleeding on hit
-config.gameplay.bulletBreakGlass.property.name=Bullet Break Glass
-config.gameplay.bulletBreakGlass.property.tooltip=Enable/Disable bullets breaking glass
-config.gameplay.penetrableBlocks.property.name=Penetrable Blocks
-config.gameplay.knockbackOnHit.property.name=Knockback On Hit
-config.gameplay.enableMuzzleEffects.property.name=Muzzle Effects
-config.gameplay.enableMuzzleEffects.property.tooltip=Enable/Disable the muzzle effects
-config.gameplay.enableBlurOnAim.property.name=Blur On Aim
-config.gameplay.enableBlurOnAim.property.tooltip=Enable/Disable blur on aim
-config.gameplay.explosionBreak.property.name=Explosion Break
-config.gameplay.explosionDamage.property.name=Explosion Damage
-config.gameplay.explosionDamage.property.tooltip=Customize the explosion damage
-config.gameplay.explodedBlockDropChance.property.name=Exploded Block Drop Chance
-config.gameplay.explodedBlockDropChance.property.tooltip=The chance for blocks to drop when exploded
-config.gameplay.statusBarPosition.property.name=Status Bar Position
-config.gameplay.statusBarPosition.property.tooltip=The screen position for the Status Bar
+config.gameplay.enableAmmoCounter.property.name=Лічильник патронів
+config.gameplay.enableAmmoCounter.property.tooltip=Увімк./Вимк. Лічильник патронів
+config.gameplay.ammoCounterX.property.name=Лічильник патронів X
+config.gameplay.ammoCounterY.property.name=Лічильник патронів Y
+config.gameplay.ammoCounterSize.property.name=Розмір лічильника патронів
+config.gameplay.enableOpenDoorDisplay.property.name=Дисплей відкритих дверей
+config.gameplay.enableAmmoCounterBackground.property.name=Фон лічильника патронів
+config.gameplay.enableAmmoCounterBackgroundReverse.property.name=Зворотний лічильник патронів
+config.gameplay.enableOpenDoorDisplay.property.tooltip=Увімк./Вимк. Дисплей відкритих дверей
+config.gameplay.holdToAim.property.name=Утримувати для прицілювання
+config.gameplay.holdToAim.property.tooltip=Увімк./Вимк. Утримувати для прицілювання
+config.gameplay.enableAmmoCounterBackground.property.tooltip=Увімк./Вимк. Фон для лічильника патронів
+config.gameplay.enableBleedingOnHit.property.name=Кровотеча при попаданні
+config.gameplay.enableBleedingOnHit.property.tooltip=Увімк./Вимк. Кровотеча при попаданні
+config.gameplay.bulletBreakGlass.property.name=Куля розбиває скло
+config.gameplay.bulletBreakGlass.property.tooltip=Увімк./Вимк. Куля розбиває скло
+config.gameplay.penetrableBlocks.property.name=Проникнення блоків
+config.gameplay.knockbackOnHit.property.name=Відштовхування при попаданні
+config.gameplay.enableMuzzleEffects.property.name=Вогнепальні ефекти
+config.gameplay.enableMuzzleEffects.property.tooltip=Увімк./Вимк. Вогнепальні ефекти
+config.gameplay.enableBlurOnAim.property.name=Розмиття при наведенні
+config.gameplay.enableBlurOnAim.property.tooltip=Увімк./Вимк. Розмиття при наведенні
+config.gameplay.explosionBreak.property.name=Руйнування від вибуху
+config.gameplay.explosionDamage.property.name=Пошкодження від вибуху
+config.gameplay.explosionDamage.property.tooltip=Налаштування пошкодження від вибуху
+config.gameplay.explodedBlockDropChance.property.name=Шанс випадіння блоків після вибуху
+config.gameplay.explodedBlockDropChance.property.tooltip=Шанс випадіння блоків під час вибуху
+config.gameplay.statusBarPosition.property.name=Положення панелі статусу
+config.gameplay.statusBarPosition.property.tooltip=Позиція на екрані для панелі статусу
 
 config.category.entities.name=Entities
-config.entities.terroristHealth.property.name=Terrorist Health
-config.entities.terroristEquipmentConfiguration.property.name=Terrorist Equipment
-config.entities.terroristSpawn.property.name=Terrorist Spawn
-config.entities.soldierHealth.property.name=Soldier Health
-config.entities.soldierSpawn.property.name=Soldier Spawn
+config.entities.terroristHealth.property.name=Здоров'я терориста
+config.entities.terroristEquipmentConfiguration.property.name=Екіпірування терориста
+config.entities.terroristSpawn.property.name=Спавн терориста
+config.entities.soldierHealth.property.name=Здоров'я солдата
+config.entities.soldierSpawn.property.name=Спавн солдата
 
 config.category.rendering.name=Rendering
 config.category.rendering.tooltip=Rendering/Shaders
 config.category.screenshaders.name=Screen Shaders
 config.category.screenshaders.tooltip=Screen Shaders
-config.rendering.enableAllShaders.property.name=Enable All Shaders
-config.rendering.enableAllShaders.property.tooltip=Enable All Shaders
-config.rendering.enableScreenShaders.property.name=Enable Screen Shaders
-config.rendering.enableScreenShaders.property.tooltip=Enable Screen Shaders
-config.rendering.enableWorldShaders.property.name=Enable World Shaders
-config.rendering.enableWorldShaders.property.tooltip=Enable World Shaders
-config.rendering.enableGunShaders.property.name=Enable Gun Shaders
-config.rendering.enableGunShaders.property.tooltip=Enable Gun Shaders
-config.rendering.enableFlashShaders.property.name=Enable Flash Shaders
-config.rendering.enableFlashShaders.property.tooltip=Enable Flash Shaders
-config.rendering.enableReticleShaders.property.name=Enable Reticle Shaders
-config.rendering.enableReticleShaders.property.tooltip=Enable Reticle Shaders
-config.rendering.enableHDRFramebuffer.property.name=Enable HDR Framebuffer
-config.rendering.enableHDRFramebuffer.property.tooltip=Enable HDR Framebuffer
-config.rendering.enableScopeEffects.property.name=Enable Scope Effects
-config.rendering.enableScopeEffects.property.tooltip=Enable Scope Effects
-config.rendering.screenshaders.bloomEffect.property.name=Enable Bloom
-config.rendering.screenshaders.bloomEffect.property.tooltip=Enable Bloom
-config.rendering.screenshaders.filmGrain.property.name=Enable Film Grain
-config.rendering.screenshaders.filmGrain.property.tooltip=Enable Film Grain
-config.rendering.screenshaders.filmGrainIntensity.property.name=Film Grain Intensity
-config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Film Grain Intensity
-config.rendering.screenshaders.bloomLayers.property.name=Amount of Bloom Layers
-config.rendering.screenshaders.bloomLayers.property.tooltip=Amount of Bloom Layers
-config.rendering.screenshaders.onScreenRainAndSnow.property.name=On-Screen Rain and Snow
-config.rendering.screenshaders.onScreenRainAndSnow.property.tooltip=Add rain and snow effect to the screen
-config.rendering.enableFancyRainAndSnow.property.name=Fancy Rain and Snow
-config.rendering.enableFancyRainAndSnow.property.tooltip=Replaces Minecraft's rain and snow rendering with a fancier variant
+config.rendering.enableAllShaders.property.name=Увімкнути всі шейдери
+config.rendering.enableAllShaders.property.tooltip=Увімкнути всі шейдери
+config.rendering.enableScreenShaders.property.name=Увімкнути екранні шейдери
+config.rendering.enableScreenShaders.property.tooltip=Увімкнути екранні шейдери
+config.rendering.enableWorldShaders.property.name=Увімкнути шейдери світу
+config.rendering.enableWorldShaders.property.tooltip=Увімкнути шейдери світу
+config.rendering.enableGunShaders.property.name=Увімкнути шейдери для зброї
+config.rendering.enableGunShaders.property.tooltip=Увімкнути шейдери для зброї
+config.rendering.enableFlashShaders.property.name=Увімкнути шейдери для спалахів
+config.rendering.enableFlashShaders.property.tooltip=Увімкнути шейдери для спалахів
+config.rendering.enableReticleShaders.property.name=Увімкнути шейдери для прицілу
+config.rendering.enableReticleShaders.property.tooltip=Увімкнути шейдери для прицілу
+config.rendering.enableHDRFramebuffer.property.name=Увімкнути буфер високої динамічної зони
+config.rendering.enableHDRFramebuffer.property.tooltip=Увімкнути буфер високої динамічної зони
+config.rendering.enableScopeEffects.property.name=Увімкнути ефекти для прицілу
+config.rendering.enableScopeEffects.property.tooltip=Увімкнути ефекти для прицілу
+config.rendering.screenshaders.bloomEffect.property.name=Увімкнути ефект блиску
+config.rendering.screenshaders.bloomEffect.property.tooltip=Увімкнути ефект блиску
+config.rendering.screenshaders.filmGrain.property.name=Увімкнути зернистість плівки
+config.rendering.screenshaders.filmGrain.property.tooltip=Увімкнути зернистість плівки
+config.rendering.screenshaders.filmGrainIntensity.property.name=Інтенсивність зернистості плівки
+config.rendering.screenshaders.filmGrainIntensity.property.tooltip=Інтенсивність зернистості плівки
+config.rendering.screenshaders.bloomLayers.property.name=Кількість шарів блиску
+config.rendering.screenshaders.bloomLayers.property.tooltip=Кількість шарів блиску
+config.rendering.screenshaders.onScreenRainAndSnow.property.name=Дощ і сніг на екрані
+config.rendering.screenshaders.onScreenRainAndSnow.property.tooltip=Додати ефект дощу і снігу на екран
+config.rendering.enableFancyRainAndSnow.property.name=Ефектні дощ і сніг
+config.rendering.enableFancyRainAndSnow.property.tooltip=Заміна стандартного відображення дощу і снігу в Minecraft на більш вишукану версію
 
 overlay.opendoor.name=Відкрити двері
 
